--- a/docs/sala/laboratorio_de_materiais_e_hidraulica_b4.mdx
+++ b/docs/sala/laboratorio_de_materiais_e_hidraulica_b4.mdx
@@ -25,6 +25,16 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Máquinas Térmicas de Fluxo",
+          size: 2,
+          teachers: [
+            "Luiz Inácio Chaves"
+          ],
+          classroom: "Laboratório de Materiais e Hidráulica B4",
+          students: "ELM2022",
+          time: "21:00 - 21:50"
+        },
+        {
           subject: "Máquinas Térmicas e de Fluxo",
           size: 2,
           teachers: [
@@ -42,18 +52,7 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Máquinas Térmicas de Fluxo",
-          size: 2,
-          teachers: [
-            "Luiz Inácio Chaves"
-          ],
-          classroom: "Laboratório de Materiais e Hidráulica B4",
-          students: "ELM2022",
-          time: "19:00 - 19:50"
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
