--- a/docs/professor/eduardo_alberto_felippsen.mdx
+++ b/docs/professor/eduardo_alberto_felippsen.mdx
@@ -10,6 +10,16 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Linguagem de Programação",
           size: 2,
           teachers: [
@@ -73,16 +83,6 @@ const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
-        {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador",
-          size: 2,
-          teachers: [
-            "Eduardo Alberto Felippsen"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: "IIW2021",
-          time: "09:25 - 10:15"
-        },
         {
           subject: "Lógica de Programação",
           size: 2,
