--- a/docs/professor/gabriele_antico_freiria.mdx
+++ b/docs/professor/gabriele_antico_freiria.mdx
@@ -12,6 +12,10 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Biologia III",
@@ -19,15 +23,10 @@ const data = {
           teachers: [
             "Gabriele Antico Freiria"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Sala 16-2",
           students: "IIW2021",
           time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
+        },
         {
           subject: "Genética molecular",
           size: 2,
