--- a/docs/professor/luiz_inacio_chaves.mdx
+++ b/docs/professor/luiz_inacio_chaves.mdx
@@ -20,6 +20,16 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
+          subject: "Processos de Fabricação 2",
+          size: 2,
+          teachers: [
+            "Luiz Inácio Chaves"
+          ],
+          classroom: "Laboratório de Usinagem B4",
+          students: "EIN2021",
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Processos de Fabricação 3",
           size: 2,
           teachers: [
@@ -72,18 +82,7 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Processos de Fabricação 2",
-          size: 2,
-          teachers: [
-            "Luiz Inácio Chaves"
-          ],
-          classroom: "Laboratório de Usinagem B4",
-          students: "EIN2021",
-          time: "09:25 - 10:15"
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
