--- a/docs/professor/olavo_jose_luiz_junior.mdx
+++ b/docs/professor/olavo_jose_luiz_junior.mdx
@@ -136,7 +136,7 @@ const data = {
           teachers: [
             "Olavo José Luiz Junior"
           ],
-          classroom: "Sala 8",
+          classroom: "Laboratório de Informatica BioPark",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         },
