--- a/docs/professor/paula_magalhaes_souza_deccache.mdx
+++ b/docs/professor/paula_magalhaes_souza_deccache.mdx
@@ -11,16 +11,6 @@ const data = {
           teachers: [
             "Paula Magalhães Souza Deccache"
           ],
-          classroom: "Laboratório de Biologia",
-          students: "IIW2023A",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Biologia I",
-          size: 2,
-          teachers: [
-            "Paula Magalhães Souza Deccache"
-          ],
           classroom: "Sala 8",
           students: "IIW2023B",
           time: "10:15 - 11:05"
@@ -63,20 +53,30 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
-          subject: "Biologia 2",
-          size: 1,
+          subject: "Biologia I",
+          size: 2,
           teachers: [
             "Paula Magalhães Souza Deccache"
           ],
-          classroom: "Laboratório de Biologia",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
+          classroom: "Sala 9-2",
+          students: "IIW2023A",
+          time: "15:05 - 15:55"
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
       dayClasses: [
+        {
+          subject: "Biologia 2",
+          size: 1,
+          teachers: [
+            "Paula Magalhães Souza Deccache"
+          ],
+          classroom: "Sala 12-2",
+          students: "EIN2022",
+          time: "11:05 - 11:55"
+        },
         {
           subject: "Zoologia dos cordados II",
           size: 2,
