--- a/docs/sala/laboratorio_de_informatica_biopark.mdx
+++ b/docs/sala/laboratorio_de_informatica_biopark.mdx
@@ -116,6 +116,16 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
+          subject: "Projeto Integrador",
+          size: 2,
+          teachers: [
+            "Olavo José Luiz Junior"
+          ],
+          classroom: "Laboratório de Informatica BioPark",
+          students: "TDS2023-2S",
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "Desenvolvimento WEB Orientado a Objetos",
           size: 2,
           teachers: [
