--- a/docs/sala/sala_12-2.mdx
+++ b/docs/sala/sala_12-2.mdx
@@ -20,6 +20,16 @@ const data = {
           time: "08:20 - 09:10"
         },
         {
+          subject: "Geografia 2",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "Sala 12-2",
+          students: "EIN2022",
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Lingua Portuguesa 2",
           size: 2,
           teachers: [
@@ -45,24 +55,24 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Sociologia 2",
+          subject: "Biologia 2",
           size: 1,
           teachers: [
-            "Everaldo Lorensetti"
+            "Paula Magalhães Souza Deccache"
+          ],
+          classroom: "Sala 12-2",
+          students: "EIN2022",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Artes 2",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
           ],
           classroom: "Sala 12-2",
           students: "EIN2022",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Geografia 2",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 12-2",
-          students: "EIN2022",
-          time: "08:20 - 09:10"
         }
       ]
     },
@@ -78,22 +88,22 @@ const data = {
           classroom: "Sala 12-2",
           students: "EIN2022",
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Artes 2",
-          size: 1,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 12-2",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Sociologia 2",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 12-2",
+          students: "EIN2022",
+          time: "09:25 - 10:15"
+        },
         {
           subject: "Lingua Estrangeira Moderna 1 - Inglês",
           size: 1,
