--- a/docs/sala/sala_16-2.mdx
+++ b/docs/sala/sala_16-2.mdx
@@ -43,7 +43,7 @@ const data = {
           ],
           classroom: "Sala 16-2",
           students: "IIW2021",
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -85,16 +85,6 @@ const data = {
           size: 1,
           teachers: [
             "Milton Aparecido Azevedo"
-          ],
-          classroom: "Sala 16-2",
-          students: "IIW2021",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Serviços em nuvem",
-          size: 1,
-          teachers: [
-            "Rafael Gil Ferques"
           ],
           classroom: "Sala 16-2",
           students: "IIW2021",
@@ -161,6 +151,16 @@ const data = {
           time: "11:05 - 11:55"
         },
         {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Sala 16-2",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Genética molecular",
           size: 2,
           teachers: [
@@ -188,7 +188,7 @@ const data = {
           ],
           classroom: "Sala 16-2",
           students: "IIW2021",
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         }
       ]
     },
