--- a/docs/turma/ein2022.mdx
+++ b/docs/turma/ein2022.mdx
@@ -51,6 +51,16 @@ const data = {
           time: "08:20 - 09:10"
         },
         {
+          subject: "Geografia 2",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "Sala 12-2",
+          students: "EIN2022",
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Lingua Portuguesa 2",
           size: 2,
           teachers: [
@@ -59,16 +69,6 @@ const data = {
           classroom: "Sala 12-2",
           students: "EIN2022",
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Biologia 2",
-          size: 1,
-          teachers: [
-            "Paula Magalhães Souza Deccache"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
         },
         {
           subject: "História 2",
@@ -86,24 +86,24 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Sociologia 2",
+          subject: "Biologia 2",
           size: 1,
           teachers: [
-            "Everaldo Lorensetti"
+            "Paula Magalhães Souza Deccache"
+          ],
+          classroom: "Sala 12-2",
+          students: "EIN2022",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Artes 2",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
           ],
           classroom: "Sala 12-2",
           students: "EIN2022",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Geografia 2",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 12-2",
-          students: "EIN2022",
-          time: "08:20 - 09:10"
         },
         {
           subject: "Metrologia",
@@ -113,11 +113,21 @@ const data = {
           ],
           classroom: "Laboratório de Metrologia B4",
           students: "EIN2022",
-          time: "11:05 - 11:55"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Processos de Fabricação 1",
-          size: 2,
+          size: 1,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "Laboratório de Usinagem B4",
+          students: "EIN2022",
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Processos de Fabricação 1",
+          size: 1,
           teachers: [
             "Sérgio Takahashi"
           ],
@@ -130,6 +140,16 @@ const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
+        {
+          subject: "Educação Física 2",
+          size: 1,
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "Educação Física / Sala 4 B2",
+          students: "EIN2022",
+          time: "09:25 - 10:15"
+        },
         {
           subject: "Cálculo Mecânico",
           size: 2,
@@ -149,32 +169,12 @@ const data = {
           classroom: "Laboratório de Química",
           students: "EIN2022",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Artes 2",
-          size: 1,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 12-2",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Educação Física 2",
-          size: 1,
-          teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
-        },
         {
           subject: "Física 2",
           size: 1,
@@ -184,6 +184,16 @@ const data = {
           classroom: "Laboratório de Física",
           students: "EIN2022",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Sociologia 2",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 12-2",
+          students: "EIN2022",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Lingua Estrangeira Moderna 1 - Inglês",
