--- a/docs/turma/tds2023-2s.mdx
+++ b/docs/turma/tds2023-2s.mdx
@@ -46,7 +46,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "Sala 8",
+          classroom: "Laboratório de Robótica",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         }
@@ -86,7 +86,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "Sala 8",
+          classroom: "Laboratório de Robótica",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         },
@@ -96,7 +96,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "Sala 8",
+          classroom: "Laboratório de Robótica",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
         }
@@ -111,7 +111,7 @@ const data = {
           teachers: [
             "Olavo José Luiz Junior"
           ],
-          classroom: "Sala 8",
+          classroom: "Laboratório de Informatica BioPark",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         }
