--- a/docs/turma/tds2023-3s.mdx
+++ b/docs/turma/tds2023-3s.mdx
@@ -27,7 +27,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "Sala 6",
+          classroom: "Laboratório de Robótica",
           students: "TDS2023-3S",
           time: "21:00 - 21:50"
         },
@@ -37,7 +37,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "Sala 6",
+          classroom: "Laboratório de Robótica",
           students: "TDS2023-3S",
           time: "19:00 - 19:50"
         }
