--- a/docs/professor/rafael_gil_ferques.mdx
+++ b/docs/professor/rafael_gil_ferques.mdx
@@ -21,23 +21,13 @@ const data = {
         },
         {
           subject: "Serviços em nuvem",
-          size: 1,
+          size: 2,
           teachers: [
             "Rafael Gil Ferques"
           ],
           classroom: "Laboratório de Computação Aplicada",
           students: "IIW2021",
-          time: "14:00 - 14:50"
-        },
-        {
-          subject: "Serviços em nuvem",
-          size: 1,
-          teachers: [
-            "Rafael Gil Ferques"
-          ],
-          classroom: "Sala 16-2",
-          students: "IIW2021",
-          time: "15:05 - 15:55"
+          time: "13:10 - 14:00"
         },
         {
           subject: "Sistemas Gerenciadores de Conteúdo WEB",
@@ -68,7 +58,18 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Projeto Integrador II",
+          size: 2,
+          teachers: [
+            "Rafael Gil Ferques"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: "IIW2022A",
+          time: "15:05 - 15:55"
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
@@ -82,16 +83,6 @@ const data = {
           classroom: "",
           students: "TADS_ESP",
           time: "19:00 - 19:50"
-        },
-        {
-          subject: "Projeto Integrador II",
-          size: 2,
-          teachers: [
-            "Rafael Gil Ferques"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: "IIW2022A",
-          time: "15:05 - 15:55"
         },
         {
           subject: "Tecnologias WEB",
