--- a/docs/professor/renata_carolina_pereira.mdx
+++ b/docs/professor/renata_carolina_pereira.mdx
@@ -6,16 +6,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Artes 1",
-          size: 1,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 7-2",
-          students: "EIN2023",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Artes 3",
           size: 1,
           teachers: [
@@ -39,7 +29,28 @@ const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Artes 1",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "Sala 7-2",
+          students: "EIN2023",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Artes II",
+          size: 2,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "Sala 11-2",
+          students: "AGO2022",
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
@@ -53,6 +64,16 @@ const data = {
           classroom: "Sala 13-2",
           students: "IIW2022A",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Artes 2",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "Sala 12-2",
+          students: "EIN2022",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -67,27 +88,7 @@ const data = {
           ],
           classroom: "Sala 13-2",
           students: "IIW2022A",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Artes 2",
-          size: 1,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 12-2",
-          students: "EIN2022",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Artes II",
-          size: 2,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 11-2",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
         }
       ]
     },
