--- a/docs/professor/sergio_takahashi.mdx
+++ b/docs/professor/sergio_takahashi.mdx
@@ -52,11 +52,21 @@ const data = {
           ],
           classroom: "Laboratório de Metrologia B4",
           students: "EIN2022",
-          time: "11:05 - 11:55"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Processos de Fabricação 1",
-          size: 2,
+          size: 1,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "Laboratório de Usinagem B4",
+          students: "EIN2022",
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Processos de Fabricação 1",
+          size: 1,
           teachers: [
             "Sérgio Takahashi"
           ],
