--- a/docs/sala/laboratorio_de_informatica_c.mdx
+++ b/docs/sala/laboratorio_de_informatica_c.mdx
@@ -41,6 +41,16 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Tecnologia e Automação comercial",
           size: 2,
           teachers: [
