--- a/docs/sala/laboratorio_de_robotica.mdx
+++ b/docs/sala/laboratorio_de_robotica.mdx
@@ -39,6 +39,16 @@ const data = {
           classroom: "Laboratório de Robótica",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Linguagem de Programação",
+          size: 2,
+          teachers: [
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Robótica",
+          students: "TDS2023-2S",
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -69,11 +79,53 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Linguagem de Programação",
+          size: 2,
+          teachers: [
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Robótica",
+          students: "TDS2023-2S",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Linguagem de Programação",
+          size: 2,
+          teachers: [
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Robótica",
+          students: "TDS2023-2S",
+          time: "21:00 - 21:50"
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Desenvolvimento para Dispositivos Móveis",
+          size: 2,
+          teachers: [
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Robótica",
+          students: "TDS2023-3S",
+          time: "21:00 - 21:50"
+        },
+        {
+          subject: "Desenvolvimento para Dispositivos Móveis",
+          size: 2,
+          teachers: [
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Robótica",
+          students: "TDS2023-3S",
+          time: "19:00 - 19:50"
+        }
+      ]
     }
   ],
   time: [
