--- a/docs/sala/laboratorio_de_usinagem_b4.mdx
+++ b/docs/sala/laboratorio_de_usinagem_b4.mdx
@@ -10,6 +10,16 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Processos de Fabricação 2",
+          size: 2,
+          teachers: [
+            "Luiz Inácio Chaves"
+          ],
+          classroom: "Laboratório de Usinagem B4",
+          students: "EIN2021",
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Processos de Fabricação 3",
           size: 2,
           teachers: [
@@ -36,7 +46,17 @@ const data = {
         },
         {
           subject: "Processos de Fabricação 1",
-          size: 2,
+          size: 1,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "Laboratório de Usinagem B4",
+          students: "EIN2022",
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Processos de Fabricação 1",
+          size: 1,
           teachers: [
             "Sérgio Takahashi"
           ],
@@ -52,18 +72,7 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Processos de Fabricação 2",
-          size: 2,
-          teachers: [
-            "Luiz Inácio Chaves"
-          ],
-          classroom: "Laboratório de Usinagem B4",
-          students: "EIN2021",
-          time: "09:25 - 10:15"
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
