--- a/docs/sala/sala_9-2.mdx
+++ b/docs/sala/sala_9-2.mdx
@@ -23,7 +23,7 @@ const data = {
           ],
           classroom: "Sala 9-2",
           students: "IIW2023A",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Filosofia I",
@@ -33,7 +33,7 @@ const data = {
           ],
           classroom: "Sala 9-2",
           students: "IIW2023A",
-          time: "14:00 - 14:50"
+          time: "13:10 - 14:00"
         },
         {
           subject: "Comunicação e Expressão",
@@ -53,7 +53,7 @@ const data = {
           ],
           classroom: "Sala 9-2",
           students: "IIW2023A",
-          time: "13:10 - 14:00"
+          time: "14:00 - 14:50"
         }
       ]
     },
@@ -78,7 +78,7 @@ const data = {
           ],
           classroom: "Sala 9-2",
           students: "IIW2023A",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Filosofia I",
@@ -88,7 +88,7 @@ const data = {
           ],
           classroom: "Sala 9-2",
           students: "IIW2023A",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         },
         {
           subject: "Instrumentos de Medidas Elétricas",
@@ -99,6 +99,16 @@ const data = {
           classroom: "Sala 9-2",
           students: "ELM2023",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Biologia I",
+          size: 2,
+          teachers: [
+            "Paula Magalhães Souza Deccache"
+          ],
+          classroom: "Sala 9-2",
+          students: "IIW2023A",
+          time: "15:05 - 15:55"
         }
       ]
     },
@@ -138,16 +148,6 @@ const data = {
           ],
           classroom: "Sala 9-2",
           students: "IIW2023A",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 9-2",
-          students: "IIW2023A",
           time: "09:25 - 10:15"
         }
       ]
@@ -170,6 +170,16 @@ const data = {
           size: 1,
           teachers: [
             "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 9-2",
+          students: "IIW2023A",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Michelli Cristina Galli"
           ],
           classroom: "Sala 9-2",
           students: "IIW2023A",
