--- a/docs/turma/iiw2021.mdx
+++ b/docs/turma/iiw2021.mdx
@@ -23,7 +23,7 @@ const data = {
           ],
           classroom: "Laboratório de Física",
           students: "IIW2021",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Matemática III",
@@ -33,13 +33,23 @@ const data = {
           ],
           classroom: "Sala 16-2",
           students: "IIW2021",
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         }
       ]
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        },
         {
           subject: "Filosofia III",
           size: 1,
@@ -51,16 +61,6 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Desenvolvimento Responsivo e Otimização de Sites",
-          size: 2,
-          teachers: [
-            "Luis Henrique Manosso Von Mecheln"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: "IIW2021",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "História III",
           size: 1,
           teachers: [
@@ -68,27 +68,17 @@ const data = {
           ],
           classroom: "Sala 16-2",
           students: "IIW2021",
-          time: "13:10 - 14:00"
+          time: "15:05 - 15:55"
         },
         {
           subject: "Serviços em nuvem",
-          size: 1,
+          size: 2,
           teachers: [
             "Rafael Gil Ferques"
           ],
           classroom: "Laboratório de Computação Aplicada",
           students: "IIW2021",
-          time: "14:00 - 14:50"
-        },
-        {
-          subject: "Serviços em nuvem",
-          size: 1,
-          teachers: [
-            "Rafael Gil Ferques"
-          ],
-          classroom: "Sala 16-2",
-          students: "IIW2021",
-          time: "15:05 - 15:55"
+          time: "13:10 - 14:00"
         },
         {
           subject: "Sistemas Gerenciadores de Conteúdo WEB",
@@ -116,12 +106,12 @@ const data = {
           time: "11:05 - 11:55"
         },
         {
-          subject: "Biologia III",
+          subject: "Desenvolvimento Responsivo e Otimização de Sites",
           size: 2,
           teachers: [
-            "Gabriele Antico Freiria"
+            "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Laboratório de Informatica B",
           students: "IIW2021",
           time: "07:30 - 08:20"
         },
@@ -141,16 +131,6 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador",
-          size: 2,
-          teachers: [
-            "Eduardo Alberto Felippsen"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: "IIW2021",
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Sociologia II",
           size: 1,
           teachers: [
@@ -161,6 +141,16 @@ const data = {
           time: "11:05 - 11:55"
         },
         {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Sala 16-2",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Geografia II",
           size: 2,
           teachers: [
@@ -168,7 +158,7 @@ const data = {
           ],
           classroom: "Sala 16-2",
           students: "IIW2021",
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         }
       ]
     },
