--- a/docs/professor/olavo_jose_luiz_junior.mdx
+++ b/docs/professor/olavo_jose_luiz_junior.mdx
@@ -146,7 +146,7 @@ const data = {
           teachers: [
             "Olavo José Luiz Junior"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: "IIW2021",
           time: "07:30 - 08:20"
         }
