--- a/docs/sala/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/laboratorio_de_computacao_aplicada.mdx
@@ -53,7 +53,18 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Projeto Integrador III",
+          size: 2,
+          teachers: [
+            "Olavo José Luiz Junior"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        }
+      ]
     }
   ],
   time: [
