--- a/docs/sala/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/laboratorio_de_informatica_b.mdx
@@ -73,18 +73,7 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Projeto Integrador III",
-          size: 2,
-          teachers: [
-            "Olavo José Luiz Junior"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: "IIW2021",
-          time: "07:30 - 08:20"
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
