--- a/docs/professor/rafael_gil_ferques.mdx
+++ b/docs/professor/rafael_gil_ferques.mdx
@@ -20,16 +20,6 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Serviços em nuvem",
-          size: 2,
-          teachers: [
-            "Rafael Gil Ferques"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: "IIW2021",
-          time: "13:10 - 14:00"
-        },
-        {
           subject: "Sistemas Gerenciadores de Conteúdo WEB",
           size: 2,
           teachers: [
@@ -43,6 +33,10 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Linguagens de apresentação e estruturação de conteúdos",
@@ -52,13 +46,8 @@ const data = {
           ],
           classroom: "Laboratório de Informatica A",
           students: "IIW2023A",
-          time: "10:15 - 11:05"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
+          time: "15:05 - 15:55"
+        },
         {
           subject: "Projeto Integrador II",
           size: 2,
@@ -67,7 +56,17 @@ const data = {
           ],
           classroom: "Laboratório de Informatica A",
           students: "IIW2022A",
-          time: "15:05 - 15:55"
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Serviços em nuvem",
+          size: 2,
+          teachers: [
+            "Rafael Gil Ferques"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: "IIW2021",
+          time: "13:10 - 14:00"
         }
       ]
     },
