--- a/docs/professor/fabio_antonio_da_silva.mdx
+++ b/docs/professor/fabio_antonio_da_silva.mdx
@@ -11,16 +11,6 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "Sala 9-2",
-          students: "IIW2023A",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Filosofia I",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
           classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
@@ -149,7 +139,18 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 9-2",
+          students: "IIW2023A",
+          time: "13:10 - 14:00"
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
