--- a/docs/professor/renata_carolina_pereira.mdx
+++ b/docs/professor/renata_carolina_pereira.mdx
@@ -14,22 +14,22 @@ const data = {
           classroom: "Sala 2-2",
           students: "EIN2020",
           time: "08:20 - 09:10"
-        },
-        {
-          subject: "Artes I",
-          size: 2,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 6-2",
-          students: "AGO2023",
-          time: "10:15 - 11:05"
         }
       ]
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
+        {
+          subject: "Arte I",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "Sala 13-2",
+          students: "IIW2022A",
+          time: "09:25 - 10:15"
+        },
         {
           subject: "Artes 1",
           size: 1,
@@ -39,6 +39,16 @@ const data = {
           classroom: "Sala 7-2",
           students: "EIN2023",
           time: "11:05 - 11:55"
+        },
+        {
+          subject: "Artes I",
+          size: 2,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "Sala 6-2",
+          students: "AGO2023",
+          time: "15:05 - 15:55"
         },
         {
           subject: "Artes II",
@@ -79,18 +89,7 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Arte I",
-          size: 1,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 13-2",
-          students: "IIW2022A",
-          time: "09:25 - 10:15"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
