Preparação v4 segunda parte

--- a/docs/professor/jhones_donizetti_mendes.mdx
+++ b/docs/professor/jhones_donizetti_mendes.mdx
@@ -13,16 +13,6 @@ const data = {
           ],
           classroom: "Sala 7-2",
           students: "EIN2023",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Geografia II",
-          size: 2,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 11-2",
-          students: "AGO2022",
           time: "09:25 - 10:15"
         }
       ]
@@ -42,13 +32,43 @@ const data = {
         },
         {
           subject: "Geografia 4",
-          size: 2,
+          size: 1,
           teachers: [
             "Jhones Donizetti Mendes"
           ],
           classroom: "Sala 2-2",
           students: "EIN2020",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Geografia 4",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "Sala 2-2",
+          students: "EIN2020",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Geografia II",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "Sala 11-2",
+          students: "AGO2022",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Geografia II",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "Sala 11-2",
+          students: "AGO2022",
+          time: "08:20 - 09:10"
         },
         {
           subject: "Trabalho de conclusão de curso I",
@@ -77,13 +97,23 @@ const data = {
         },
         {
           subject: "Geografia I",
-          size: 2,
+          size: 1,
           teachers: [
             "Jhones Donizetti Mendes"
           ],
           classroom: "Sala 6-2",
           students: "AGO2023",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Geografia I",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "Sala 6-2",
+          students: "AGO2023",
+          time: "11:05 - 11:55"
         }
       ]
     },
