--- a/docs/professor/renata_carolina_pereira.mdx
+++ b/docs/professor/renata_carolina_pereira.mdx
@@ -42,7 +42,7 @@ const data = {
         },
         {
           subject: "Artes I",
-          size: 2,
+          size: 1,
           teachers: [
             "Renata Carolina Pereira"
           ],
@@ -51,14 +51,14 @@ const data = {
           time: "15:05 - 15:55"
         },
         {
-          subject: "Artes II",
-          size: 2,
+          subject: "Artes I",
+          size: 1,
           teachers: [
             "Renata Carolina Pereira"
           ],
-          classroom: "Sala 11-2",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
+          classroom: "Sala 6-2",
+          students: "AGO2023",
+          time: "15:55 - 16:45"
         }
       ]
     },
@@ -84,6 +84,26 @@ const data = {
           classroom: "Sala 12-2",
           students: "EIN2022",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Artes II",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "Sala 11-2",
+          students: "AGO2022",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Artes II",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "Sala 11-2",
+          students: "AGO2022",
+          time: "11:05 - 11:55"
         }
       ]
     },
