--- a/docs/sala/sala_2-2.mdx
+++ b/docs/sala/sala_2-2.mdx
@@ -43,7 +43,7 @@ const data = {
           ],
           classroom: "Sala 2-2",
           students: "TAL2023",
-          time: "21:50 - 22:40"
+          time: "21:00 - 21:50"
         },
         {
           subject: "Comunicação técnica",
@@ -53,7 +53,7 @@ const data = {
           ],
           classroom: "Sala 2-2",
           students: "TAL2023",
-          time: "21:00 - 21:50"
+          time: "21:50 - 22:40"
         },
         {
           subject: "Artes 3",
@@ -82,13 +82,23 @@ const data = {
         },
         {
           subject: "Geografia 4",
-          size: 2,
+          size: 1,
           teachers: [
             "Jhones Donizetti Mendes"
           ],
           classroom: "Sala 2-2",
           students: "EIN2020",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Geografia 4",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "Sala 2-2",
+          students: "EIN2020",
+          time: "11:05 - 11:55"
         },
         {
           subject: "Ética e relações humanas no trabalho",
@@ -117,17 +127,7 @@ const data = {
       dayClasses: [
         {
           subject: "Gestão Ambiental na Indústria dos Alimentos",
-          size: 1,
-          teachers: [
-            "Daniele de Almeida Paula"
-          ],
-          classroom: "Sala 2-2",
-          students: "TAL2023",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Gestão Ambiental na Indústria dos Alimentos",
-          size: 1,
+          size: 2,
           teachers: [
             "Daniele de Almeida Paula"
           ],
