--- a/docs/turma/ago2023.mdx
+++ b/docs/turma/ago2023.mdx
@@ -82,13 +82,23 @@ const data = {
         },
         {
           subject: "Artes I",
-          size: 2,
+          size: 1,
           teachers: [
             "Renata Carolina Pereira"
           ],
           classroom: "Sala 6-2",
           students: "AGO2023",
           time: "15:05 - 15:55"
+        },
+        {
+          subject: "Artes I",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "Sala 6-2",
+          students: "AGO2023",
+          time: "15:55 - 16:45"
         },
         {
           subject: "Agroecologia e DRS",
@@ -127,13 +137,23 @@ const data = {
         },
         {
           subject: "Geografia I",
-          size: 2,
+          size: 1,
           teachers: [
             "Jhones Donizetti Mendes"
           ],
           classroom: "Sala 6-2",
           students: "AGO2023",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Geografia I",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "Sala 6-2",
+          students: "AGO2023",
+          time: "11:05 - 11:55"
         }
       ]
     },
