--- a/docs/turma/ein2020.mdx
+++ b/docs/turma/ein2020.mdx
@@ -62,13 +62,23 @@ const data = {
         },
         {
           subject: "Geografia 4",
-          size: 2,
+          size: 1,
           teachers: [
             "Jhones Donizetti Mendes"
           ],
           classroom: "Sala 2-2",
           students: "EIN2020",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Geografia 4",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "Sala 2-2",
+          students: "EIN2020",
+          time: "11:05 - 11:55"
         },
         {
           subject: "Processos de Fabricação 3",
