--- a/docs/professor/elizangela_cavazzini_cesca.mdx
+++ b/docs/professor/elizangela_cavazzini_cesca.mdx
@@ -20,16 +20,6 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Química II",
-          size: 2,
-          teachers: [
-            "Elizangela Cavazzini Cesca"
-          ],
-          classroom: "Sala 11-2",
-          students: "AGO2022",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Química III",
           size: 2,
           teachers: [
@@ -43,7 +33,18 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Química II",
+          size: 2,
+          teachers: [
+            "Elizangela Cavazzini Cesca"
+          ],
+          classroom: "Sala 11-2",
+          students: "AGO2022",
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
