--- a/docs/sala/sala_6-2.mdx
+++ b/docs/sala/sala_6-2.mdx
@@ -102,13 +102,23 @@ const data = {
         },
         {
           subject: "Artes I",
-          size: 2,
+          size: 1,
           teachers: [
             "Renata Carolina Pereira"
           ],
           classroom: "Sala 6-2",
           students: "AGO2023",
           time: "15:05 - 15:55"
+        },
+        {
+          subject: "Artes I",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "Sala 6-2",
+          students: "AGO2023",
+          time: "15:55 - 16:45"
         },
         {
           subject: "Agroecologia e DRS",
@@ -147,13 +157,23 @@ const data = {
         },
         {
           subject: "Geografia I",
-          size: 2,
+          size: 1,
           teachers: [
             "Jhones Donizetti Mendes"
           ],
           classroom: "Sala 6-2",
           students: "AGO2023",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Geografia I",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "Sala 6-2",
+          students: "AGO2023",
+          time: "11:05 - 11:55"
         },
         {
           subject: "Eletrônica de Potência",
@@ -202,17 +222,7 @@ const data = {
         },
         {
           subject: "Instalações elétricas",
-          size: 1,
-          teachers: [
-            "Novo Professor de Elétrica PSS"
-          ],
-          classroom: "Sala 6-2",
-          students: "ELE2022",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Instalações elétricas",
-          size: 1,
+          size: 2,
           teachers: [
             "Novo Professor de Elétrica PSS"
           ],
@@ -247,17 +257,7 @@ const data = {
         },
         {
           subject: "Instalações elétricas",
-          size: 1,
-          teachers: [
-            "Novo Professor de Elétrica PSS"
-          ],
-          classroom: "Sala 6-2",
-          students: "ELE2022",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Instalações elétricas",
-          size: 1,
+          size: 2,
           teachers: [
             "Novo Professor de Elétrica PSS"
           ],
