--- a/docs/professor/darlan_roque_dapieve.mdx
+++ b/docs/professor/darlan_roque_dapieve.mdx
@@ -84,6 +84,17 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
+          subject: "Física Aplicada",
+          size: 2,
+          teachers: [
+            "Bruno Garcia Bonfim",
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "",
+          students: "ELM2023+ELE2023",
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "Desenho Técnico 2",
           size: 2,
           teachers: [
@@ -91,7 +102,7 @@ const data = {
           ],
           classroom: "Laboratório de Desenho Técnico / Sala 5-2",
           students: "ELM2023",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         }
       ]
     }
