--- a/docs/professor/polyanna_guimaraes_e_miranda.mdx
+++ b/docs/professor/polyanna_guimaraes_e_miranda.mdx
@@ -74,7 +74,30 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Física 2",
+          size: 1,
+          teachers: [
+            "Bruno Garcia Bonfim",
+            "Polyanna Guimarães e Miranda"
+          ],
+          classroom: "Laboratório de Física",
+          students: "EIN2022",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Física 3",
+          size: 2,
+          teachers: [
+            "Bruno Garcia Bonfim",
+            "Polyanna Guimarães e Miranda"
+          ],
+          classroom: "Laboratório de Física",
+          students: "EIN2021",
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
