--- a/docs/professor/wylliam_salviano_gongora.mdx
+++ b/docs/professor/wylliam_salviano_gongora.mdx
@@ -57,7 +57,19 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Física 4",
+          size: 2,
+          teachers: [
+            "Bruno Garcia Bonfim",
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "Laboratório de Física",
+          students: "EIN2020",
+          time: "10:15 - 11:05"
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
