--- a/docs/sala/laboratorio_de_fisica.mdx
+++ b/docs/sala/laboratorio_de_fisica.mdx
@@ -76,10 +76,22 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Física 2",
+          size: 1,
+          teachers: [
+            "Bruno Garcia Bonfim",
+            "Polyanna Guimarães e Miranda"
+          ],
+          classroom: "Laboratório de Física",
+          students: "EIN2022",
+          time: "11:05 - 11:55"
+        },
+        {
           subject: "Física 3",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Polyanna Guimarães e Miranda"
           ],
           classroom: "Laboratório de Física",
           students: "EIN2021",
@@ -94,7 +106,8 @@ const data = {
           subject: "Física 4",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Wylliam Salviano Gongora"
           ],
           classroom: "Laboratório de Física",
           students: "EIN2020",
@@ -104,7 +117,8 @@ const data = {
           subject: "Física I",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Daniele de Almeida Paula"
           ],
           classroom: "Laboratório de Física",
           students: "COM2023",
@@ -119,21 +133,12 @@ const data = {
           subject: "Física 1",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Daniele de Almeida Paula"
           ],
           classroom: "Laboratório de Física",
           students: "EIN2023",
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Física 2",
-          size: 1,
-          teachers: [
-            "Bruno Garcia Bonfim"
-          ],
-          classroom: "Laboratório de Física",
-          students: "EIN2022",
-          time: "07:30 - 08:20"
         }
       ]
     }
