--- a/docs/sala/sala_7-2.mdx
+++ b/docs/sala/sala_7-2.mdx
@@ -144,18 +144,7 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Física Aplicada",
-          size: 2,
-          teachers: [
-            "Bruno Garcia Bonfim"
-          ],
-          classroom: "Sala 7-2",
-          students: "ELE2023",
-          time: "19:00 - 19:50"
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
