--- a/docs/turma/ein2020.mdx
+++ b/docs/turma/ein2020.mdx
@@ -134,7 +134,8 @@ const data = {
           subject: "Física 4",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Wylliam Salviano Gongora"
           ],
           classroom: "Laboratório de Física",
           students: "EIN2020",
