--- a/docs/turma/ein2021.mdx
+++ b/docs/turma/ein2021.mdx
@@ -89,7 +89,8 @@ const data = {
           subject: "Física 3",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Polyanna Guimarães e Miranda"
           ],
           classroom: "Laboratório de Física",
           students: "EIN2021",
