--- a/docs/turma/ele2023.mdx
+++ b/docs/turma/ele2023.mdx
@@ -109,10 +109,11 @@ const data = {
           subject: "Física Aplicada",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Darlan Roque Dapieve"
           ],
-          classroom: "Sala 7-2",
-          students: "ELE2023",
+          classroom: "",
+          students: "ELM2023+ELE2023",
           time: "19:00 - 19:50"
         },
         {
