--- a/docs/turma/elm2023.mdx
+++ b/docs/turma/elm2023.mdx
@@ -109,11 +109,12 @@ const data = {
           subject: "Física Aplicada",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Darlan Roque Dapieve"
           ],
-          classroom: "Sala 9-2",
-          students: "ELM2023",
-          time: "21:00 - 21:50"
+          classroom: "",
+          students: "ELM2023+ELE2023",
+          time: "19:00 - 19:50"
         },
         {
           subject: "Desenho Técnico 2",
@@ -123,7 +124,7 @@ const data = {
           ],
           classroom: "Laboratório de Desenho Técnico / Sala 5-2",
           students: "ELM2023",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         }
       ]
     }
