--- a/docs/professor/bruno_garcia_bonfim.mdx
+++ b/docs/professor/bruno_garcia_bonfim.mdx
@@ -14,10 +14,22 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Física 2",
+          size: 1,
+          teachers: [
+            "Bruno Garcia Bonfim",
+            "Polyanna Guimarães e Miranda"
+          ],
+          classroom: "Laboratório de Física",
+          students: "EIN2022",
+          time: "11:05 - 11:55"
+        },
+        {
           subject: "Física 3",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Polyanna Guimarães e Miranda"
           ],
           classroom: "Laboratório de Física",
           students: "EIN2021",
@@ -32,7 +44,8 @@ const data = {
           subject: "Física 4",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Wylliam Salviano Gongora"
           ],
           classroom: "Laboratório de Física",
           students: "EIN2020",
@@ -42,7 +55,8 @@ const data = {
           subject: "Física I",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Daniele de Almeida Paula"
           ],
           classroom: "Laboratório de Física",
           students: "COM2023",
@@ -57,40 +71,22 @@ const data = {
           subject: "Física 1",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Daniele de Almeida Paula"
           ],
           classroom: "Laboratório de Física",
           students: "EIN2023",
           time: "10:15 - 11:05"
         },
         {
-          subject: "Física 2",
-          size: 1,
-          teachers: [
-            "Bruno Garcia Bonfim"
-          ],
-          classroom: "Laboratório de Física",
-          students: "EIN2022",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Física Aplicada",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Darlan Roque Dapieve"
           ],
-          classroom: "Sala 9-2",
-          students: "ELM2023",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Física Aplicada",
-          size: 2,
-          teachers: [
-            "Bruno Garcia Bonfim"
-          ],
-          classroom: "Sala 7-2",
-          students: "ELE2023",
+          classroom: "",
+          students: "ELM2023+ELE2023",
           time: "19:00 - 19:50"
         }
       ]
