--- a/docs/professor/daniele_de_almeida_paula.mdx
+++ b/docs/professor/daniele_de_almeida_paula.mdx
@@ -33,12 +33,34 @@ const data = {
           classroom: "Sala 2-2",
           students: "TAL2023",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA)",
+          size: 2,
+          teachers: [
+            "Daniele de Almeida Paula",
+            "Karen Cristina Guedes Silva"
+          ],
+          classroom: "Sala 14-2",
+          students: "AGO2021",
+          time: "10:15 - 11:05"
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
+        {
+          subject: "Física I",
+          size: 2,
+          teachers: [
+            "Bruno Garcia Bonfim",
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Laboratório de Física",
+          students: "COM2023",
+          time: "15:05 - 15:55"
+        },
         {
           subject: "Gestão e Planejamento aplicados à Agroindústria",
           size: 2,
@@ -66,6 +88,17 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
+          subject: "Física 1",
+          size: 2,
+          teachers: [
+            "Bruno Garcia Bonfim",
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Laboratório de Física",
+          students: "EIN2023",
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Fundamentos da Química",
           size: 2,
           teachers: [
@@ -75,17 +108,6 @@ const data = {
           classroom: "Sala 2-2",
           students: "TAL2023",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA)",
-          size: 2,
-          teachers: [
-            "Daniele de Almeida Paula",
-            "Karen Cristina Guedes Silva"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2021",
-          time: "10:15 - 11:05"
         }
       ]
     }
