--- a/docs/professor/karen_cristina_guedes_silva.mdx
+++ b/docs/professor/karen_cristina_guedes_silva.mdx
@@ -23,7 +23,19 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA)",
+          size: 2,
+          teachers: [
+            "Daniele de Almeida Paula",
+            "Karen Cristina Guedes Silva"
+          ],
+          classroom: "Sala 14-2",
+          students: "AGO2021",
+          time: "10:15 - 11:05"
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -43,17 +55,6 @@ const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA)",
-          size: 2,
-          teachers: [
-            "Daniele de Almeida Paula",
-            "Karen Cristina Guedes Silva"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2021",
-          time: "10:15 - 11:05"
-        },
         {
           subject: "Matemática Aplicada",
           size: 2,
