--- a/docs/sala/laboratorio_de_usinagem_b4.mdx
+++ b/docs/sala/laboratorio_de_usinagem_b4.mdx
@@ -53,16 +53,6 @@ const data = {
           classroom: "Laboratório de Usinagem B4",
           students: "EIN2022",
           time: "08:20 - 09:10"
-        },
-        {
-          subject: "Processos de Fabricação 1",
-          size: 1,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Usinagem B4",
-          students: "EIN2022",
-          time: "11:05 - 11:55"
         }
       ]
     },
@@ -72,7 +62,18 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Processos de Fabricação 1",
+          size: 1,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "Laboratório de Usinagem B4",
+          students: "EIN2022",
+          time: "07:30 - 08:20"
+        }
+      ]
     }
   ],
   time: [
