--- a/docs/turma/ein2022.mdx
+++ b/docs/turma/ein2022.mdx
@@ -86,6 +86,17 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Física 2",
+          size: 1,
+          teachers: [
+            "Bruno Garcia Bonfim",
+            "Polyanna Guimarães e Miranda"
+          ],
+          classroom: "Laboratório de Física",
+          students: "EIN2022",
+          time: "11:05 - 11:55"
+        },
+        {
           subject: "Biologia 2",
           size: 1,
           teachers: [
@@ -124,16 +135,6 @@ const data = {
           classroom: "Laboratório de Usinagem B4",
           students: "EIN2022",
           time: "08:20 - 09:10"
-        },
-        {
-          subject: "Processos de Fabricação 1",
-          size: 1,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Usinagem B4",
-          students: "EIN2022",
-          time: "11:05 - 11:55"
         }
       ]
     },
@@ -176,16 +177,6 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Física 2",
-          size: 1,
-          teachers: [
-            "Bruno Garcia Bonfim"
-          ],
-          classroom: "Laboratório de Física",
-          students: "EIN2022",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Sociologia 2",
           size: 1,
           teachers: [
@@ -214,6 +205,16 @@ const data = {
           classroom: "Sala 3-1",
           students: "EIN2022",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Processos de Fabricação 1",
+          size: 1,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "Laboratório de Usinagem B4",
+          students: "EIN2022",
+          time: "07:30 - 08:20"
         }
       ]
     }
