--- a/docs/turma/ein2023.mdx
+++ b/docs/turma/ein2023.mdx
@@ -219,7 +219,8 @@ const data = {
           subject: "Física 1",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Bruno Garcia Bonfim",
+            "Daniele de Almeida Paula"
           ],
           classroom: "Laboratório de Física",
           students: "EIN2023",
