--- a/docs/sala/sala_8-2.mdx
+++ b/docs/sala/sala_8-2.mdx
@@ -104,7 +104,7 @@ const data = {
           subject: "Gestão de pessoas",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -169,7 +169,7 @@ const data = {
           subject: "Projeto Integrador I",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -198,7 +198,7 @@ const data = {
           subject: "Fundamentos da Administração",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 8-2",
           students: [
