--- a/docs/professor/humberto_fioravante_ferro.mdx
+++ b/docs/professor/humberto_fioravante_ferro.mdx
@@ -29,6 +29,18 @@ const data = {
             "TADS_ESP"
           ],
           time: "19:50 - 20:40"
+        },
+        {
+          subject: "Metodoloia da Pesquisa científica",
+          size: 1,
+          teachers: [
+            "Humberto Fioravante Ferro"
+          ],
+          classroom: "",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "19:00 - 19:50"
         }
       ]
     },
