--- a/docs/sala/sala_3-1.mdx
+++ b/docs/sala/sala_3-1.mdx
@@ -157,7 +157,7 @@ const data = {
           subject: "Técnicas de Vendas e Negociação",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 3-1",
           students: [
@@ -210,7 +210,7 @@ const data = {
           subject: "Gestão Estratégica de Pessoas",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 3-1",
           students: [
