--- a/docs/turma/com2023.mdx
+++ b/docs/turma/com2023.mdx
@@ -116,7 +116,7 @@ const data = {
           subject: "Gestão de pessoas",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -182,7 +182,7 @@ const data = {
           subject: "Projeto Integrador I",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -211,7 +211,7 @@ const data = {
           subject: "Fundamentos da Administração",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS"
+            "Diego Padovan Vieira"
           ],
           classroom: "Sala 8-2",
           students: [
